--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,3 +1,40 @@
+<h1>Listing Tweets</h1>
+
+<%= form_with url: tweets_path, method: :get, local: true do |form| %>
+  <%= form.label :query, "Search Tweets:" %>
+  <%= form.text_field :query, value: params[:query] %>
+  <%= form.submit "Search" %>
+<% end %>
+
+<table>
+  <thead>
+    <tr>
+      <th>Description</th>
+      <th>User name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tweets.each do |tweet| %>
+      <tr>
+        <td><%= tweet.description %></td>
+        <td><%= tweet.user_name %></td>
+        <td><%= link_to 'Show', tweet %></td>
+        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to 'New Tweet', new_tweet_path %>
+
+<div class="pagination">
+  <%= paginate @tweets %>
+</div>
+
+
 <p style="color: green"><%= notice %></p>
 
 <h1>Tweets</h1>
@@ -11,4 +48,33 @@
   <% end %>
 </div>
 
-<%= link_to "New tweet", new_tweet_path %>
+<h1>Listing Tweets</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Description</th>
+      <th>User name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tweets.each do |tweet| %>
+      <tr>
+        <td><%= tweet.description %></td>
+        <td><%= tweet.user_name %></td>
+        <td><%= link_to 'Show', tweet %></td>
+        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to 'New Tweet', new_tweet_path %>
+
+<div class="pagination">
+  <%= paginate @tweets %>
+</div>
+
